<resources>
    <string name="app_name">Games</string>
    <string name="title_app">SpooderGames</string>
    <string name="title_2048">2048</string>
    <string name="tittle_senku">Senku</string>
    <string name="copyright">©Spooderman SA</string>
    <string name="score_title">SCORE</string>
    <string name="best_title">BEST</string>
    <string name="button_NewGame">New Game</string>
    <string name="button_Volver">Volver</string>
</resources>