<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back">

    <LinearLayout
        android:id="@+id/top_tope"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/topes" />

    <LinearLayout
        android:id="@+id/tittle_layout"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_app"
            android:textSize="50sp"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_2048"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/title_2048"
            android:background="@drawable/rounded_button"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:textSize="25sp"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_senku"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/tittle_senku"
            android:background="@drawable/rounded_button"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:textSize="25sp"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/copyright_layout"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/copyright_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:textColor="@color/text" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_tope"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/topes"/>
</LinearLayout>