<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <LinearLayout
        android:id="@+id/top_tope"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/topes"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/tittle_layout"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/tittle_senku"
            android:textColor="@color/text"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/button_Volver" />


    </LinearLayout>

    <GridLayout
        android:id="@+id/panel_senku"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/background_senku"
        android:columnCount="7"
        android:rowCount="7"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/button_senku"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

    </GridLayout>

    <LinearLayout
        android:id="@+id/copyright_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/copyright_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_tope"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/topes"/>

</LinearLayout>