<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_tope"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/topes"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/tittle_layout"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:text="@string/title_2048"
            android:textColor="@color/text"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="275dp"
            android:layout_height="match_parent">

            <TableRow>

                <TextView
                    android:id="@+id/Score_title"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/score_title"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/Best_title"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/best_title"
                    android:textColor="@color/text" />

                <Button
                    android:id="@+id/button_volver"
                    android:text="@string/button_Volver"
                    android:background="@drawable/rounded_button"/>
            </TableRow>

            <TableRow
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/Score_Value"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="0"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/Best_Value"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="0"
                    android:textColor="@color/text" />

                <Button
                    android:id="@+id/button_newgame"
                    android:text="@string/button_NewGame"
                    android:background="@drawable/rounded_button"
                    />
            </TableRow>
        </TableLayout>


    </LinearLayout>

    <GridLayout
        android:id="@+id/panel_2048"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:columnCount="4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:rowCount="4"
        android:background="@color/background_2048">

        <Button
            android:id="@+id/boton_0_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_0_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_0_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_0_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_1_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_1_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_1_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_1_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_2_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_2_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_2_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_2_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_3_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_3_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_3_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/boton_3_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="0"
            android:background="@drawable/button_2048"
            android:layout_margin="2dp"
            android:textSize="30dp"/>
    </GridLayout>

    <LinearLayout
        android:id="@+id/copyright_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/copyright_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_tope"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/topes"
        android:orientation="horizontal" />

</LinearLayout>